[package]
name = "vst3-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.3"
widestring = "0.5.1"
vst3-sys = { git = "https://github.com/RustAudio/vst3-sys" }
vst3-com = { git = "https://github.com/RustAudio/vst3-sys" }
# vst3-com = { path = "../vst3-sys/com" }
log = "0.4.8"
flexi_logger = "0.15.2"
