[package]
name = "vst3"
version = "0.1.0"
edition = "2021"

readme = "README.md"
repository = "https://github.com/jesnor/vst3-rs"

license = "MIT OR Apache-2.0"
keywords = ["vst", "vst3", "plugin"]

[dependencies]
itertools = "0.10.3"
widestring = "0.5.1"
vst3-sys = { git = "https://github.com/RustAudio/vst3-sys" }
vst3-com = { git = "https://github.com/RustAudio/vst3-sys" }
# vst3-com = { path = "../vst3-sys/com" }
log = "0.4.8"
flexi_logger = "0.15.2"
once_cell = "1.9.0"
byteorder = "1.1.0"
uuid = "0.8.2"

[[example]]
name = "sine_synth"
crate-type = ["cdylib"]
